Added installation instructions to README file
Signed-off-by: Tomaz Noleto <tomaz.noleto@openbossa.org>

--- a/README
+++ b/README
@@ -1,1 +1,59 @@
 A simple Qt-based 2D game engine.
+
+========
+1. Build
+========
+
+1.1) Dependencies
+
+* Qt5
+	https://qt.gitorious.org/qt/qt5
+
+* Box2D >= 2.2.1
+	http://box2d.org
+
+We strongly recommend you to install Qt5 to a different prefix from Qt4.
+If you have Qt4 installed at /usr, we suggest one of the following prefixes:
+
+* /opt/Qt5
+* /usr/local/Qt5
+
+1.2) Building
+
+Available QMake parameters:
+
+* QT5PATH (Optional)
+	Prefix where Qt5 has been installed. It is required to install
+	Quasi's QML import plugin and related files.
+
+* BOX2DPATH (Optional)
+	Path to Box2D installation. If your Linux distro packaging system
+	provides the required version, it is recommended to use it to install
+	the library and devel files.
+
+* BUILD_EXAMPLES (Optional)
+	Use BUILD_EXAMPLES=1 to build usage examples.
+
+Sample build from Quasi's root source tree:
+
+$ qmake QT5PATH=/opt/Qt5 BOX2DPATH=/usr BUILD_EXAMPLES=1
+$ make
+$ sudo make install
+
+
+===========
+2. Examples
+===========
+
+If you have installed the QML plugin to the proper Qt5 import directory,
+you can run the examples directly from their specific build directories.
+
+Example:
+
+$ cd $(QUASI_SOURCE_TREE)/examples/box2dpolygon_circle/
+$ ./box2dpolygon_circle
+
+If Quasi QML plugin was not installed you need first to export QML_IMPORT_PATH
+environment variable:
+
+$ export QML_IMPORT_PATH=$(QUASI_SOURCE_TREE)/src/imports
